WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221485
[GPUProcess] If the GPUProcess crashes during fullscreen playback, video pauses and exits fullscreen
https://bugs.webkit.org/show_bug.cgi?id=221485
Summary
[GPUProcess] If the GPUProcess crashes during fullscreen playback, video paus...
Chris Dumez
Reported
2021-02-05 10:01:52 PST
If the GPUProcess crashes during fullscreen playback, video pauses and exits fullscreen. This is suboptimal. Ideally, the video would just resume playing in fullscreen, like we do inline.
Attachments
Patch
(1.76 KB, patch)
2021-02-05 10:12 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-02-05 10:12:54 PST
Created
attachment 419421
[details]
Patch
EWS
Comment 2
2021-02-05 10:59:07 PST
Committed
r272429
: <
https://trac.webkit.org/changeset/272429
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419421
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-05 11:00:19 PST
<
rdar://problem/74032110
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug