[GPUProcess] If the GPUProcess crashes during fullscreen playback, video pauses and exits fullscreen https://bugs.webkit.org/show_bug.cgi?id=221485

Reviewed by Eric Carlson.

If the GPUProcess crashed during fullscreen playback, video would pause and exit fullscreen. This was suboptimal.
The video now just resumes playing while in fullscreen, just like we do when inline.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerReloadAndResumePlaybackIfNeeded):


Canonical link: https://commits.webkit.org/233752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272429 268f45cc-cd09-0410-ab3c-d52691b4dbfc